--- a/tools/importer/sections-mapping.json
+++ b/tools/importer/sections-mapping.json
@@ -7,27 +7,60 @@
         "id": "1-1",
         "blocks": [
           {
-            "id": "box-id--83274387",
-            "x": 0,
+            "id": "box-id--1635432296",
+            "x": 70,
             "y": 0,
-            "width": 1246,
-            "height": 181,
-            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]",
+            "width": 1440,
+            "height": 90,
+            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[1]",
             "layout": {
               "numCols": 1,
               "numRows": 2
             },
             "childrenXpaths": [
               {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[1]",
-                "xpathWithDetails": "id(\"masthead\")/div[@class=\"nav-utility background--pale-gray print-hidden\"]"
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[1]/div[1]",
+                "xpathWithDetails": "id(\"masthead\")/div[@class=\"nav-utility background--pale-gray print-hidden\"]/div[@class=\"g-row mbn\"]"
               },
               {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[2]",
-                "xpathWithDetails": "id(\"masthead\")/div[@class=\"g-row nav-brand\"]"
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[1]/div[2]",
+                "xpathWithDetails": "id(\"masthead\")/div[@class=\"nav-utility background--pale-gray print-hidden\"]/div[@class=\"nav-secondary-wrapper nav-utility-wrapper\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.4)",
+            "color": "rgba(148, 0, 211, 0.3)",
+            "mapping": "defaultContent",
+            "customBlockName": ""
+          }
+        ],
+        "settings": {
+          "section-metadata-style": "top,hidden,dark-grey"
+        }
+      },
+      {
+        "id": "1-2",
+        "blocks": [
+          {
+            "id": "box-id--1635432265",
+            "x": 60,
+            "y": 90,
+            "width": 1460,
+            "height": 90,
+            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[2]",
+            "layout": {
+              "numCols": 2,
+              "numRows": 1
+            },
+            "childrenXpaths": [
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[2]/a[1]",
+                "xpathWithDetails": "id(\"masthead\")/div[@class=\"g-row nav-brand\"]/a[@class=\"g-col g-1-2 logo-masthead\"]"
+              },
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/header[1]/div[2]/nav[1]",
+                "xpathWithDetails": "id(\"masthead\")/div[@class=\"g-row nav-brand\"]/nav[@class=\"nav-main print-hidden prn\"]"
+              }
+            ],
+            "color": "rgba(148, 0, 211, 0.3)",
             "mapping": "header",
             "customBlockName": ""
           }
@@ -35,7 +68,7 @@
         "settings": {}
       },
       {
-        "id": "1-2",
+        "id": "1-3",
         "blocks": [
           {
             "id": "box-id-1388725091",
@@ -58,7 +91,7 @@
         }
       },
       {
-        "id": "1-3",
+        "id": "1-4",
         "blocks": [
           {
             "id": "box-id--639543998",
